2006-04-28 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genFunction): set global pic14_hasInterrupt on
	    definition of an interrupt handler,
	* src/pic/glue.c (pic14_emitInterruptHandler): moved output of
	    interrupt handler stuff from picglue() to separate routine,
	  (picglue): enabled definition of intr handlers in files w/o main()

2006-04-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/librarian/sdcclib.c: moved include <limits.h> up to enable
	  compilation with MSVC 2005 Express Edition (VC8)

2006-04-26 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/Makefile: fixed build of gbz80 lib

2006-04-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug-460010.c,
	* support/regression/tests/bug-524691.c,
	* support/regression/tests/bug-716242.c: removed conditional defines
	  that are already in testfwk.h

2006-04-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (AccAXRrl1, AccAXLrl1): changed to real rotate by 1,
	  (AccAXRsh1): added, shift right by 1,
	  (AccAXLsh, AccAXRsh, AccAXRshS): updated for AccAXRrl1, AccAXRsh1 and
	   AccAXLrl1
	* support/regression/tests/rotate.c: use <stdint.h> and enabled ds390

2006-04-25 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (decorateType): partial fix for RFE 1475769,
	remove cast to same type
	* src/SDCCast.c (decorateType): fix for RFE 1475742,
	optimize 'ifx (op == 0)' resp. 'ifx (op != 0)'
	* as/z80/Makefile,
	* link/z80/Makefile: removed, they have moved to
	Makefile.in files
	* configure,
	* configure.in: replaced duplicate message about ucsim by missing sdcpp
	* install-sh: fix bug #1204398 by setting umask 0022
	* device/lib/Makefile: separate build of z80 and gbz80 lib

2006-04-24 Bernhard Held <bernhard AT bernhardheld.de>

	Enabled VPATH feature: changed nearly all Makefiles (149 files).
	See sdccman.lyx '2.4.10 VPATH feature' about how to use it.
