@@ -3,7 +3,7 @@
 
 typedef struct {
   unsigned int isLibrarySource:1;
-  unsigned int disable_df;
+  int disable_df;
 } pic14_options_t;
 
 extern pic14_options_t pic14_options;
